Terraform/AWS Nano Node/network/security_groups/main.tf
# Bastion Security Group to provide access to Bastion Hosts
resource "aws_security_group" "nano_sg" {
  name        = "nano_sg"
  description = "Nano Security Group"
  vpc_id      = "${var.nano_vpc_id}"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Any port to anywhere
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
